--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
   </head>
   <body>
     <h1>Hello from index.html!</h1>
+    <h2>Line 2</h2>
     <script src="bundle.js"></script>
   </body>
 </html>
