--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,36 @@
+<!--
+  **NOTE:** This is a template for index.html.
+  It uses ejs and HtmlWebpackPlugin to generate a different index.html for each environment.
+  HtmlWebpackPlugin will dynamically add references to the scripts and styles that it bundles
+  to this file. The generated bundles have hash-based filenames,
+  so it's necessary to add the references dynamically.
+  For more info on ejs, see http://www.embeddedjs.com/.
+  For examples of using it with HtmlWebpackPlugin,
+  see https://github.com/jaketrent/html-webpack-template/blob/master/index.ejs
+-->
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <% if (htmlWebpackPlugin.options.trackJSToken) { %>
+    <script type="text/javascript">window._trackJs = { token: '<%=htmlWebpackPlugin.options.trackJSToken%>' };</script>
+    <script type="text/javascript" src="https://cdn.trackjs.com/releases/current/tracker.js"></script>
+    <% } %>
     <meta charset="UTF-8">
   </head>
   <body>
-    <h1>Hello from index.html!</h1>
-    <h2>Line 2</h2>
-    <script src="bundle.js"></script>
+    <h1>Users</h1>
+    <table>
+      <thead>
+        <th>&nbsp;</th>
+        <th>Id</th>
+        <th>First Name</th>
+        <th>Last Name</th>
+        <th>Email</th>
+      </thead>
+      <tbody id="users">
+        
+      </tbody>
+    </table>
+
   </body>
 </html>
